Adding Styles Form 3

--- a/3/index.html
+++ b/3/index.html
@@ -15,9 +15,9 @@
             <h1>Contact Us!</h1>
         </div>
         <input type="text" placeholder="Name..." class="inputFields">
-        <input type="text" placeholder="Email..." class="inputsFields">
-        <input type="text" placeholder="Subject..." class="inputsFields">
-        <textarea name="messageBox" id="messageBox" cols="30" rows="10" class="inputsFields"></textarea>
+        <input type="email" placeholder="Email..." class="inputFields" id="emailBox">
+        <input type="text" placeholder="Subject..." class="inputFields">
+        <textarea name="messageBox" id="messageBox" cols="30" rows="10" placeholder="Message....."></textarea>
         <button type="submit"> SEND MESSAGE</button>
     </div>
 
