--- a/4/index.html
+++ b/4/index.html
@@ -24,7 +24,7 @@
                 </tr>
                 <tr>
                     <td>Enter Password</td>
-                    <td><input type="password" id="passeordUser" class="inputs" required></td>
+                    <td><input type="password" id="passwordUser" class="inputs" required></td>
                 </tr>
                 <tr>
                     <td>Enter Address</td>
