Compelete ServiceBar and TacoDescription

--- a/Maktab CW-008/6/index.html
+++ b/Maktab CW-008/6/index.html
@@ -35,23 +35,35 @@
     </section>
 <section class="servicesBar">
     <div class="serviceBox">
+        <span class="logos">🌮</span>
        <h5>Tacos</h5> 
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
     <div class="serviceBox">
+        <span class="logos">🍺</span>
         <h5>Beer</h5> 
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
     <div class="serviceBox">
+        <span class="logos">🍷</span>
         <h5>Wine</h5> 
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
     <div class="serviceBox">
+        <span class="logos">🎵</span>
         <h5>Music</h5> 
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
 </section>
-<section></section>
+<section class="tacoDes">
+    <div class="img_taco"></div>
+    <div class="description">
+        <h4>Featured Taco</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <button class="learnBtn">Learn More →</button>
+    </div>
+</section>
 <section></section>
 <section></section>
     </div>
