--- a/Maktab CW-008/6/index.html
+++ b/Maktab CW-008/6/index.html
@@ -64,8 +64,23 @@
         <button class="learnBtn">Learn More →</button>
     </div>
 </section>
-<section></section>
-<section></section>
+<section class="picsBar">
+    <div>
+        <h3 class="section-title"> Instant Grams </h3>
+    </div>
+    <div class="gallery">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/100" alt="img">
+    </div>
+</section>
     </div>
 </body>
 </html>
