Compelete Site with Media Queries

--- a/Maktab CW-008/6/index.html
+++ b/Maktab CW-008/6/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets//styles/style.css">
-    <title>HTML</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />    <title>HTML</title>
+    <title>DOC</title>
 </head>
 <body>
+    <div class="bcg"></div>
     <div class="container">
+        <button class="menu"><span class="material-symbols-outlined">
+            menu
+            </span>Menu</button>
     <section class="head">
     <div class="imgBox">
         <h2 style="background-color: goldenrod;">Terry's Taco Jonit</h2>
@@ -69,16 +74,16 @@
         <h3 class="section-title"> Instant Grams </h3>
     </div>
     <div class="gallery">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
-        <img src="https://picsum.photos/100" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
+        <img src="https://picsum.photos/120" alt="img">
     </div>
 </section>
     </div>
